Fix project page template

--- a/_includes/cvlab-content.html
+++ b/_includes/cvlab-content.html
@@ -64,7 +64,7 @@
             </span>
             &emsp;
             <span class="link-block">
-              <a href="{{ page.papercode }}" class="external-link button is-normal is-rounded is-dark">
+              <a href="{{ page.paperpage }}" class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                   <i class="ion ion-ios-globe"></i>
                 </span>
