--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,9 +17,10 @@
 
   <div class="top ion ion-ios-arrow-up" title="Top"></div>
 
-  <!-- {% include search.html %} -->
-
-  <!-- {% include javascripts.html %} -->
+  {% comment %}
+  {% include search.html %}
+  {% include javascripts.html %}
+  {% endcomment %}
 </body>
 
 </html>
