Fix links for HybridSDF

--- a/_includes/cvlab-content.html
+++ b/_includes/cvlab-content.html
@@ -62,6 +62,7 @@
                 <span>arXiv</span>
               </a>
             </span>
+            {% if page.papercode %}
             &emsp;
             <span class="link-block">
               <a href="{{ page.papercode }}" class="external-link button is-normal is-rounded is-dark">
@@ -71,6 +72,7 @@
                 <span>Code</span>
               </a>
             </span>
+            {% endif %}
             &emsp;
             <span class="link-block">
               <a href="{{ page.paperpage }}" class="external-link button is-normal is-rounded is-dark">
