--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,9 @@
 
 <body>
 
-  <!-- {% if site.data.settings.google-analytics %}
+  {% if site.data.settings.google-analytics %}
   {% include google-analytics.html %}
-  {% endif %} -->
+  {% endif %}
 
   <!-- begin content -->
   <main class="content" aria-label="Content" style="margin-top: 50px;">
